--- a/tmux.conf
+++ b/tmux.conf
@@ -16,7 +16,7 @@ set -g status-right-length 90
 set -g status-right '#(acpi -b)| %Y-%m-%d %H:%M:%S #[default]'
 
 #Powerline
-source '/usr/share/tmux/powerline.conf'
+#source '/usr/share/tmux/powerline.conf'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 
