fixing for chip

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,14 +2,46 @@ set -g prefix `
 bind ` send-prefix
 
 setw -g mode-keys vi
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-open'
+
+# rise my session rise
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-processes 'ssh rainbowstream weechat'
+
+set -g pane-active-border-style "fg=red bg=default"
+set -g pane-border-style "fg=white bg=default"
+
+# The statusbar {
+set -g status-utf8 on
+set -g status-style "fg=default,bold bg=default"
+set -g status-interval 20
+set -g status-position bottom
+set -g status-right '#[fg=yellow]🔋#(sh ~/script/battery.sh)🌡#[fg==yellow]#(istats cpu temp | head -c 14 | tail -c 5)°C🕰#[fg=cyan] %H:%M:%S '
+set -g status-left ''
+set -g status-right-length 30
+set -g status-left-length 30
+set -g window-status-current-format ''
+set -g window-status-format ''
+# messaging
+set -g message-fg black
+set -g message-bg default
+set -g message-command-fg blue
+set -g message-command-bg default
+#Meeses
+set-option -g mouse on
+bind-key F8 run "mpc toggle"
+bind-key F9 run "mpc next"
+bind-key F7 run "mpc prev"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-
 run '~/.tmux/plugins/tpm/tpm'
+
