Hopfully this uploads

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,5 @@
-set -g prefix `
-bind ` send-prefix
+set -g prefix C-m
+bind C-m send-prefix
 
 setw -g mode-keys vi
 set -g default-terminal "xterm-256color"
@@ -25,7 +25,7 @@ set -g status-utf8 on
 set -g status-style "fg=default,bold bg=default"
 set -g status-interval 20
 set -g status-position bottom
-set -g status-right '#[fg=yellow]🔋#(sh ~/script/battery.sh)🌡#[fg==yellow]#(istats cpu temp | head -c 14 | tail -c 5)°C🕰#[fg=cyan] %H:%M:%S '
+set -g status-right '#[fg=yellow]🔋  #(sudo sh ~/scripts/battery.sh| tail -c 4)🌡 #[fg==yellow]#(sudo sh ~/scripts/battery.sh | sed -n '9p'| sed "s/[^0-9^.]//g")°C🕰#[fg=cyan] %H:%M:%S '
 set -g status-left ''
 set -g status-right-length 30
 set -g status-left-length 30
@@ -37,11 +37,6 @@ set -g message-bg default
 set -g message-command-fg blue
 set -g message-command-bg default
 #Meeses
-set-option -g mouse on
-bind-key F8 run "mpc toggle"
-bind-key F9 run "mpc next"
-bind-key F7 run "mpc prev"
-
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
